--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     <section class="intro">
         <h2>Welcome to Swarm Fund</h2>
-        <p>We’re a community-driven platform that supports small businesses and independent artists through funding. Join our swarm and help make a difference!</p>
+        <p>We are a community-driven platform that supports small businesses and independent artists through funding. Join our swarm and help make a difference!</p>
     </section>
 
     <section class="form-section">
