--- a/index.html
+++ b/index.html
@@ -8,6 +8,19 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <header>
+        <div class="logo">
+            <img src="bee-logo.png" alt="Swarm Fund Logo" class="logo-img">
+            <h1>Swarm Fund</h1>
+        </div>
+        <p class="tagline">Where the community helps independent artists and businesses thrive.</p>
+    </header>
+
+    <section class="intro">
+        <h2>Welcome to Swarm Fund</h2>
+        <p>We’re a community-driven platform that supports small businesses and independent artists through funding. Join our swarm and help make a difference!</p>
+    </section>
+
     <section class="form-section">
         <h2>Submit Your Idea</h2>
         <form id="ideaForm">
@@ -35,6 +48,21 @@
                 <input type="email" id="email" name="email" placeholder="you@example.com" required>
             </div>
 
+            <div class="form-group">
+                <label for="referrer">How Did You Find Us?</label>
+                <select id="referrer" name="referrer" required>
+                    <option value="twitter">Twitter</option>
+                    <option value="instagram">Instagram</</option>
+                    <option value="facebook">Facebook</option>
+                    <option value="friend">Friend</option>
+                </select>
+            </div>
+
+            <div class="form-group">
+                <label for="shoutout">Who Should We Shout Out?</label>
+                <input type="text" id="shoutout" name="shoutout" placeholder="Your Twitter/Instagram handle">
+            </div>
+
             <div class="form-group terms">
                 <input type="checkbox" id="terms" name="terms" required>
                 <label for="terms">I accept the <a href="terms.html" target="_blank">Terms and Conditions</a></label>
@@ -44,12 +72,18 @@
         </form>
     </section>
 
+    <footer>
+        <p>© 2024 Swarm Fund. All Rights Reserved.</p>
+    </footer>
+
     <!-- Firebase SDKs placed just before the closing body tag -->
+    <!-- Firebase App (the core Firebase SDK) -->
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-firestore.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-analytics.js"></script>
 
     <script>
+        // Your web app's Firebase configuration
         const firebaseConfig = {
             apiKey: "YOUR_API_KEY",
             authDomain: "YOUR_AUTH_DOMAIN",
@@ -59,11 +93,14 @@
             appId: "YOUR_APP_ID",
             measurementId: "YOUR_MEASUREMENT_ID"
         };
+
+        // Initialize Firebase
         firebase.initializeApp(firebaseConfig);
         firebase.analytics();
         const db = firebase.firestore();
     </script>
 
+    <!-- Your custom script -->
     <script src="scripts.js"></script>
 </body>
 </html>
