--- a/index.html
+++ b/index.html
@@ -85,13 +85,13 @@
     <script>
         // Your web app's Firebase configuration
         const firebaseConfig = {
-            apiKey: "YOUR_API_KEY",
-            authDomain: "YOUR_AUTH_DOMAIN",
-            projectId: "YOUR_PROJECT_ID",
-            storageBucket: "YOUR_STORAGE_BUCKET",
-            messagingSenderId: "YOUR_MESSAGING_SENDER_ID",
-            appId: "YOUR_APP_ID",
-            measurementId: "YOUR_MEASUREMENT_ID"
+            apiKey: "AIzaSyDqk1jhyeD5YvmXOXcwKCKeNKsCZ30EMcg",
+            authDomain: "swarmfundsubmissions.firebaseapp.com",
+            projectId: "swarmfundsubmissions",
+            storageBucket: "swarmfundsubmissions.appspot.com",
+            messagingSenderId: "386729555794",
+            appId: "1:386729555794:web:7dc3dc6ceaba024ee52c8b",
+            measurementId: "G-19NMLJQTGY"
         };
 
         // Initialize Firebase
