--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Swarm Fund</title>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -52,7 +52,7 @@
                 <label for="referrer">How Did You Find Us?</label>
                 <select id="referrer" name="referrer" required>
                     <option value="twitter">Twitter</option>
-                    <option value="instagram">Instagram</</option>
+                    <option value="instagram">Instagram</option>
                     <option value="facebook">Facebook</option>
                     <option value="friend">Friend</option>
                 </select>
@@ -77,7 +77,6 @@
     </footer>
 
     <!-- Firebase SDKs placed just before the closing body tag -->
-    <!-- Firebase App (the core Firebase SDK) -->
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-firestore.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-analytics.js"></script>
