--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
     <header>
         <div class="logo">
+            <img src="sf-logo.webp" alt="Swarm Fund Logo" class="logo-img"> <!-- Added the new logo -->
             <h1>Swarm Fund</h1>
         </div>
         <p class="tagline">Where the community helps independent artists and businesses thrive.</p>
@@ -73,6 +74,7 @@
 
     <footer>
         <p>© 2024 Swarm Fund. All Rights Reserved.</p>
+        <a href="https://x.com/SwarmFunders" class="x-link">Follow us on X</a> <!-- Added X link -->
     </footer>
 
     <!-- Firebase SDKs placed just before the closing body tag -->
