--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <div class="logo">
-            <img src="sf-logo.webp" alt="Swarm Fund Logo" class="logo-img"> <!-- Added the new logo -->
+            <img src="sf-logo.webp" alt="Swarm Fund Logo" class="logo-img"> <!-- Updated to use the provided logo -->
             <h1>Swarm Fund</h1>
         </div>
         <p class="tagline">Where the community helps independent artists and businesses thrive.</p>
@@ -74,7 +74,9 @@
 
     <footer>
         <p>© 2024 Swarm Fund. All Rights Reserved.</p>
-        <a href="https://x.com/SwarmFunders" class="x-link">Follow us on X</a> <!-- Added X link -->
+        <a href="https://x.com/SwarmFunders" class="x-link">
+            <img src="x-logo.png" alt="X Logo" class="x-img"> <!-- X logo button -->
+        </a>
     </footer>
 
     <!-- Firebase SDKs placed just before the closing body tag -->
