--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <img src="sf-logo.webp" alt="Swarm Fund Logo" class="logo-img"> <!-- Updated to use the provided logo -->
             <h1>Swarm Fund</h1>
         </div>
-        <p class="tagline">Where the community helps independent artists and businesses thrive.</p>
+        <p class="tagline"></p>
     </header>
 
     <section class="intro">
