--- a/index.html
+++ b/index.html
@@ -10,15 +10,15 @@
 <body>
     <header>
         <div class="logo">
-            <img src="sf-logo.webp" alt="Swarm Fund Logo" class="logo-img"> <!-- Updated to use the provided logo -->
+            <img src="sf-logo.webp" alt="Swarm Fund Logo" class="logo-img"> <!-- Added the new logo -->
             <h1>Swarm Fund</h1>
         </div>
-        <p class="tagline"></p>
+        <p class="tagline">Where the community helps independent artists and businesses thrive.</p>
     </header>
 
     <section class="intro">
         <h2>Welcome to Swarm Fund</h2>
-        <p>We’re a community-driven platform that supports small businesses and independent artists through funding.</p>
+        <p>We’re a community-driven platform that supports small businesses and independent artists through funding. Join our swarm and help make a difference!</p>
     </section>
 
     <section class="form-section">
@@ -65,7 +65,7 @@
 
             <div class="form-group terms">
                 <input type="checkbox" id="terms" name="terms" required>
-                <label for="terms">I accept the <a href="terms.html" target="_blank">Terms and Conditions</a></label>
+                <label for="terms">I accept the <a href="terms.html" target="_blank">Terms and Conditions</a></label> <!-- Linked to the new Terms and Conditions page -->
             </div>
 
             <button type="submit">Submit Idea</button>
@@ -75,7 +75,7 @@
     <footer>
         <p>© 2024 Swarm Fund. All Rights Reserved.</p>
         <a href="https://x.com/SwarmFunders" class="x-link">
-            <img src="x-logo.png" alt="X Logo" class="x-img"> <!-- X logo button -->
+            <img src="x-logo.png" alt="X Logo" class="x-img"> <!-- Added X logo button -->
         </a>
     </footer>
 
