--- a/index.html
+++ b/index.html
@@ -10,15 +10,15 @@
 <body>
     <header>
         <div class="logo">
-            <img src="sf-logo.webp" alt="Swarm Fund Logo" class="logo-img"> <!-- Added the new logo -->
+            <img src="sf-logo.png" alt="Swarm Fund Logo" class="logo-img"> <!-- Updated to use the new logo -->
             <h1>Swarm Fund</h1>
         </div>
-        <p class="tagline">Where the community helps independent artists and businesses thrive.</p>
+        <p class="tagline">Join the Swarm.</p>
     </header>
 
     <section class="intro">
         <h2>Welcome to Swarm Fund</h2>
-        <p>We’re a community-driven platform that supports small businesses and independent artists through funding. Join our swarm and help make a difference!</p>
+        <p>We’re a community-driven platform that supports small businesses and independent artists through funding.</p>
     </section>
 
     <section class="form-section">
