--- a/terms.html
+++ b/terms.html
@@ -6,11 +6,39 @@
     <title>Terms and Conditions - Swarm Fund</title>
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
+    <style>
+        /* Additional styles to prevent clipping and add padding */
+        body {
+            padding: 20px;
+            margin: 0;
+            background-color: #e6e6e6;
+        }
+
+        .content {
+            max-width: 800px;
+            margin: 0 auto;
+            padding: 20px;
+            background-color: #ffffff;
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+            border-radius: 8px;
+        }
+
+        h2, h3, p, ul, li {
+            margin-left: 20px;
+            margin-right: 20px;
+        }
+
+        .logo-img {
+            height: 50px;
+            width: auto;
+            margin-bottom: 20px;
+        }
+    </style>
 </head>
 <body>
     <header>
         <div class="logo">
-            <img src="sf-logo.webp" alt="Swarm Fund Logo" class="logo-img">
+            <img src="sf-logo.png" alt="Swarm Fund Logo" class="logo-img"> <!-- Updated to use the new logo -->
             <h1>Terms and Conditions</h1>
         </div>
     </header>
