--- a/terms.html
+++ b/terms.html
@@ -45,7 +45,7 @@
 
     <section class="content">
         <h2>Terms and Conditions of Swarm Fund</h2>
-        <p><strong>Last Updated: [Date]</strong></p>
+        <p><strong>Last Updated: [August 24]</strong></p>
 
         <h3>1. Purpose of Swarm Fund</h3>
         <p>Swarm Fund is a community-driven platform designed to support innovative crowdfunding projects. Our mission is to gather like-minded individuals to discover and promote brilliant ideas. We focus exclusively on non-charitable crowdfunding campaigns that have the potential to benefit independent artists, entrepreneurs, and creators.</p>
@@ -79,7 +79,7 @@
         <p>We reserve the right to modify these Terms and Conditions at any time. Any changes will be communicated through our platform and will take effect immediately upon posting.</p>
 
         <h3>8. Contact Information</h3>
-        <p>If you have any questions about these Terms and Conditions, please contact us at [contact email].</p>
+        <p>If you have any questions about these Terms and Conditions, please contact us at [contact@swarmfund.com].</p>
     </section>
 
     <footer>
