--- a/terms.html
+++ b/terms.html
@@ -38,7 +38,9 @@
 <body>
     <header>
         <div class="logo">
+            <a href="index.html">
             <img src="sf-logo.png" alt="Swarm Fund Logo" class="logo-img"> <!-- Updated to use the new logo -->
+            </a>
             <h1>Terms and Conditions</h1>
         </div>
     </header>
