--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 <body>
     <header>
         <div class="logo">
+            <a href="index.html">
             <img src="sf-logo.png" alt="Swarm Fund Logo" class="logo-img"> <!-- Updated to use the new logo -->
+            </a>
             <h1>Swarm Fund</h1>
         </div>
         <p class="tagline">Join the Swarm.</p>
