--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
             </a>
             <h1>Swarm Fund</h1>
         </div>
-        <p class="tagline">Join the Swarm.</p>
+        <p class="tagline">Great ideas, Funded fast/p>
     </header>
 
     <section class="intro">
-        <h2>Welcome to Swarm Fund</h2>
+        <h2>Join the Swarm</h2>
         <p>We’re a community-driven platform that supports small businesses and independent artists through funding.</p>
     </section>
 
