--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             </a>
             <h1>Swarm Fund</h1>
         </div>
-        <p class="tagline">Great ideas, Funded fast/p>
+        <p class="tagline">Great ideas, Funded fast</p>
     </header>
 
     <section class="intro">
