--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
     <section class="intro">
         <h2>Join the Swarm</h2>
-        <p>We’re a community-driven platform that supports small businesses and independent artists through funding.</p>
+        <p>We’re a community-driven platform here you can submit great ideas you have found</p>
     </section>
 
     <section class="form-section">
