--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
             </a>
             <h1>Swarm Fund</h1>
         </div>
-        <p class="tagline">Great ideas, Funded fast</p>
+        <p class="tagline">Great ideas, Funded fast.</p>
     </header>
 
     <section class="intro">
-        <h2>Join the Swarm</h2>
-        <p>We’re a community-driven platform here you can submit great ideas you have found</p>
+        <h2>Found a great idea?</h2>
+        <p>We’re a community-driven platform; submit great ideas you have found to the swarm.</p>
     </section>
 
     <section class="form-section">
