--- a/terms.html
+++ b/terms.html
@@ -4,14 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Terms and Conditions - Swarm Fund</title>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@400;600&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Helvetica:wght@400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
     <style>
-        /* Additional styles to prevent clipping and add padding */
         body {
             padding: 20px;
             margin: 0;
-            background-color: #e6e6e6;
+            background-color: #f8f8f8;
         }
 
         .content {
@@ -29,7 +28,7 @@
         }
 
         .logo-img {
-            height: 50px;
+            height: 40px;
             width: auto;
             margin-bottom: 20px;
         }
@@ -39,7 +38,7 @@
     <header>
         <div class="logo">
             <a href="index.html">
-            <img src="sf-logo.png" alt="Swarm Fund Logo" class="logo-img"> <!-- Updated to use the new logo -->
+            <img src="sf-logo.png" alt="Swarm Fund Logo" class="logo-img">
             </a>
             <h1>Terms and Conditions</h1>
         </div>
