--- a/index.html
+++ b/index.html
@@ -3,20 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Swarm Fund</title>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@400;600&display=swap" rel="stylesheet">
+    <title>SWARMFUND</title>
+    <link href="https://fonts.googleapis.com/css2?family=Helvetica:wght@400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
         <div class="logo">
             <a href="index.html">
-            <img src="sf-logo.png" alt="Swarm Fund Logo" class="logo-img"> <!-- Updated to use the new logo -->
+                <img src="sf-logo.png" alt="Swarm Fund Logo" class="logo-img">
             </a>
-            <h1>Swarm Fund</h1>
+            <h1>SWARMFUND</h1>
         </div>
-        <p class="tagline">Great ideas, Funded fast.</p>
+        <nav class="menu">
+            <ul>
+                <li><a href="today.html">Today</a></li>
+                <li><a href="recent.html">Recent</a></li>
+                <li><a href="archive.html">Archive</a></li>
+                <li><a href="assessment.html">Assessment</a></li>
+            </ul>
+        </nav>
     </header>
+
+    <hr>
 
     <section class="intro">
         <h2>Found a great idea?</h2>
@@ -67,7 +76,7 @@
 
             <div class="form-group terms">
                 <input type="checkbox" id="terms" name="terms" required>
-                <label for="terms">I accept the <a href="terms.html" target="_blank">Terms and Conditions</a></label> <!-- Linked to the new Terms and Conditions page -->
+                <label for="terms">I accept the <a href="terms.html" target="_blank">Terms and Conditions</a></label>
             </div>
 
             <button type="submit">Submit Idea</button>
@@ -75,9 +84,13 @@
     </section>
 
     <footer>
-        <p>© 2024 Swarm Fund. All Rights Reserved.</p>
+        <hr>
+        <div class="footer-content">
+            <img src="sf-logo.png" alt="Swarm Fund Logo" class="logo-img">
+            <p>SWARMFUND - Great ideas funded fast.</p>
+        </div>
         <a href="https://x.com/SwarmFunders" class="x-link">
-            <img src="x-logo.png" alt="X Logo" class="x-img"> <!-- Added X logo button -->
+            <img src="x-logo.png" alt="X Logo" class="x-img">
         </a>
     </footer>
 
@@ -102,6 +115,35 @@
         firebase.initializeApp(firebaseConfig);
         firebase.analytics();
         const db = firebase.firestore();
+
+        document.getElementById('ideaForm').addEventListener('submit', function (e) {
+            e.preventDefault();
+
+            // Get form values
+            const category = document.getElementById('ideaCategory').value;
+            const link = document.getElementById('ideaLink').value;
+            const email = document.getElementById('email').value;
+            const referrer = document.getElementById('referrer').value;
+            const shoutout = document.getElementById('shoutout').value;
+
+            // Save to Firestore
+            db.collection('submissions').add({
+                category: category,
+                link: link,
+                email: email,
+                referrer: referrer,
+                shoutout: shoutout,
+                timestamp: firebase.firestore.FieldValue.serverTimestamp()
+            })
+            .then(function () {
+                alert('Your idea has been submitted!');
+                document.getElementById('ideaForm').reset();
+            })
+            .catch(function (error) {
+                alert('There was an error with your submission. Please try again.');
+                console.error('Error writing document: ', error);
+            });
+        });
     </script>
 
     <script src="scripts.js"></script>
