--- a/assessment.html
+++ b/assessment.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ASSESSMENT - SWARMFUND</title>
-    <link href="styles.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Helvetica:wght@400;600&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
@@ -82,8 +83,63 @@
         <div class="footer-content">
             <img src="sf-logo.png" alt="Swarm Fund Logo" class="logo-img">
             <p>SWARMFUND - Great ideas funded fast.</p>
+            <a href="https://x.com/SwarmFunders" class="x-link">
+                <img src="x-logo.png" alt="X Logo" class="x-img">
+            </a>
         </div>
     </footer>
+
+    <!-- Firebase SDKs -->
+    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-firestore.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-analytics.js"></script>
+
+    <script>
+        // Firebase configuration
+        const firebaseConfig = {
+            apiKey: "AIzaSyDqk1jhyeD5YvmXOXcwKCKeNKsCZ30EMcg",
+            authDomain: "swarmfundsubmissions.firebaseapp.com",
+            projectId: "swarmfundsubmissions",
+            storageBucket: "swarmfundsubmissions.appspot.com",
+            messagingSenderId: "386729555794",
+            appId: "1:386729555794:web:7dc3dc6ceaba024ee52c8b",
+            measurementId: "G-19NMLJQTGY"
+        };
+
+        // Initialize Firebase
+        firebase.initializeApp(firebaseConfig);
+        firebase.analytics();
+        const db = firebase.firestore();
+
+        document.getElementById('ideaForm').addEventListener('submit', function (e) {
+            e.preventDefault();
+
+            // Get form values
+            const category = document.getElementById('ideaCategory').value;
+            const link = document.getElementById('ideaLink').value;
+            const email = document.getElementById('email').value;
+            const referrer = document.getElementById('referrer').value;
+            const shoutout = document.getElementById('shoutout').value;
+
+            // Save to Firestore
+            db.collection('submissions').add({
+                category: category,
+                link: link,
+                email: email,
+                referrer: referrer,
+                shoutout: shoutout,
+                timestamp: firebase.firestore.FieldValue.serverTimestamp()
+            })
+            .then(function () {
+                alert('Your idea has been submitted!');
+                document.getElementById('ideaForm').reset();
+            })
+            .catch(function (error) {
+                alert('There was an error with your submission. Please try again.');
+                console.error('Error writing document: ', error);
+            });
+        });
+    </script>
 
     <script src="scripts.js"></script>
 </body>
