--- a/index.html
+++ b/index.html
@@ -2,98 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SWARMFUND</title>
-    <link href="https://fonts.googleapis.com/css2?family=Helvetica:wght@400;600&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="styles.css">
+    <title>Redirecting...</title>
+    <script type="text/javascript">
+        window.location.href = "today.html";
+    </script>
 </head>
 <body>
-    <header>
-        <div class="logo">
-            <a href="index.html">
-                <img src="sf-logo.png" alt="Swarm Fund Logo" class="logo-img">
-            </a>
-            <h1>SWARMFUND</h1>
-        </div>
-        <nav class="menu">
-            <ul>
-                <li><a href="today.html">Today</a></li>
-                <li><a href="recent.html">Recent</a></li>
-                <li><a href="archive.html">Archive</a></li>
-                <li><a href="assessment.html">Assessment</a></li>
-            </ul>
-        </nav>
-    </header>
-
-    <hr>
-
-    <section class="intro">
-        <h2>Found a great idea?</h2>
-        <p>We’re a community-driven platform; submit great ideas you have found to the swarm.</p>
-    </section>
-
-    <section class="form-section">
-        <h2>Submit Your Idea</h2>
-        <form id="ideaForm">
-            <div class="form-group">
-                <label for="ideaCategory">Category</label>
-                <select id="ideaCategory" name="category" required>
-                    <option value="art">Art</option>
-                    <option value="music">Music</option>
-                    <option value="craft">Craft</option>
-                    <option value="tech">Tech</option>
-                </select>
-            </div>
-
-            <div class="form-group">
-                <label for="ideaLink">
-                    Link to Your Idea 
-                    <span class="info-icon" id="infoIcon">i</span>
-                </label>
-                <input type="url" id="ideaLink" name="link" placeholder="https://www.gofundme.com/your-idea" required pattern="https?://.+">
-                <div class="invalid-feedback" id="invalidFeedback">Please enter a link from a trusted crowdfunding site.</div>
-            </div>
-
-            <div class="form-group">
-                <label for="email">Your Email</label>
-                <input type="email" id="email" name="email" placeholder="you@example.com" required>
-            </div>
-
-            <div class="form-group">
-                <label for="referrer">How Did You Find Us?</label>
-                <select id="referrer" name="referrer" required>
-                    <option value="twitter">Twitter</option>
-                    <option value="instagram">Instagram</option>
-                    <option value="facebook">Facebook</option>
-                    <option value="friend">Friend</option>
-                </select>
-            </div>
-
-            <div class="form-group">
-                <label for="shoutout">Who Should We Shout Out?</label>
-                <input type="text" id="shoutout" name="shoutout" placeholder="Your Twitter/Instagram handle">
-            </div>
-
-            <div class="form-group terms">
-                <input type="checkbox" id="terms" name="terms" required>
-                <label for="terms">I accept the <a href="terms.html" target="_blank">Terms and Conditions</a></label>
-            </div>
-
-            <button type="submit">Submit Idea</button>
-        </form>
-    </section>
-
-    <footer>
-        <hr>
-        <div class="footer-content">
-            <img src="sf-logo.png" alt="Swarm Fund Logo" class="logo-img">
-            <p>SWARMFUND - Great ideas funded fast.</p>
-            <a href="https://x.com/SwarmFunders" class="x-link">
-                <img src="x-logo.png" alt="X Logo" class="x-img">
-            </a>
-        </div>
-    </footer>
-
-    <script src="scripts.js"></script>
+    <p>If you are not redirected automatically, follow this <a href="today.html">link to Today</a>.</p>
 </body>
 </html>
